@startuml diagrama_classe

title Diagrama de classes Sistema Unificado de Vacinação

class Unidade_saude{
    - nome : String
    - endereco: String
    - telefone: String
    - cnpj: String
    + constructor(nome, endereco, telefone, cnpj)
    + get_nome(nome)
    + get_endereco(endereco)
    + get_telefone(telefone)
    + get_cnpj(cnpj)
    + set_telefone(telefone)
}

class Sala{
    - numero_sala: Integer
    - andar: Integer
    - unidade_saude: Unidade_saude 
    + constructor(numero_sala, andar, unidade_saude)
    + get_numeroSala(sala)
    + get_andar(andar)
    
}

class Agenda{
    - hora: String
    - data: String
    - sala: Sala
    - vacina: Vacina
    + constructor(hora, data, sala, vacina)
    + get_informar_horario(hora)
    + set_horario(hora)
    + get_informar_data(data)
    + set_data(data)
}


Class Vacina{
    - id_vacina: Integer
    - nomeVacina: String
    - tipo: String
    - dose: Number
    - disponibilidade: boolean
    + constructor(id_vacina, nomeVacina, tipo, dose, disponibilidade)
    + get_nome_vacina(nomeVacina)
    + get_tipo(tipo)
    + get_dose(dose)
    + get_disponibilidade(disponibilidade)
    + set_disponibilidade(disponibilidade)
}

class Pessoa{
    - nome: String
    - idade: Number
    - telefone: String
    + constructor(nome, idade, telefone)
    + get_nome(nome)
    + set_nome(nome)
    + get_idade(idade)
    + set_idade(idade)
    + get_telefone(telefone)
    + set_telefone(telefone)
}

class CadastroPaciente {
    - cpf: String
    - email: String
    - endereco: String
    - pessoa: Pessoa
    + constructor(cpf, email, endereco, pessoa)
    + validarCadastro(cpf)
    + get_email(email)
    + set_email(email)
    + get_endereco(endereco)
    + set_endereco(endereco)
    + get_nome(nome)
}

class Enfermeiro {
    - registro: String
    - pessoa: Pessoa
    + constructor(registro, pessoa)
    + get_registro(registro)
    + set_registro(registro)
}

class MarcacaoVacina{
    - id_marcacao: Integer
    - CadastroPaciente: CadastroPaciente
    - Agenda: Agenda
    - Enfermeiro: Enfermeiro
    + construtor(id_marcacao, CadastroPaciente, Agenda)
    + get_id(id_marcacao)
    + validar_paciente(CadastroPaciente)
}

Pessoa <|--> CadastroPaciente
Pessoa <|--> Enfermeiro
Unidade_saude *--> Sala
Sala *--> Agenda
Vacina *--> Agenda
Agenda *--> Enfermeiro
CadastroPaciente *--> MarcacaoVacina
Agenda *--> MarcacaoVacina

@enduml
